# audio-lab

./: README.md
fir_basics/: CMakeLists.txt  CMakePresets.json  build_debug.cmd
fir_basics/src/: AudioBuffer.h  AudioUtils.cpp  AudioUtils.h  FIR.cpp  FIR.h  main.cpp
fir_q15/: CMakeLists.txt  CMakePresets.json  build_debug.cmd
fir_q15/src/: AudioBuffer.h  AudioUtils.cpp  AudioUtils.h  ErrorStats.cpp  ErrorStats.h  FIR.cpp  FIR.h  main.cpp  qtypes.h
